--- a/assets/css/zainbot.css
+++ b/assets/css/zainbot.css
@@ -400,15 +400,18 @@
 /* Mobile Responsiveness */
 @media (max-width: 480px) {
   .zainbot-widget {
-    bottom: 10px;
-    right: 10px;
+    bottom: 15px;
+    right: 15px;
+    left: auto;
+    max-width: calc(100vw - 30px);
   }
   
   .zainbot-chat {
-    width: calc(100vw - 20px);
-    height: calc(100vh - 100px);
-    right: -10px;
-    bottom: 70px;
+    width: calc(100vw - 30px);
+    height: calc(100vh - 120px);
+    right: 15px;
+    bottom: 80px;
+    left: auto;
   }
   
   .zainbot-toggle {
